@@ -1,51 +1,0 @@
-/* 
- * Copyright (c) 1994 The University of Utah and
- * the Computer Systems Laboratory at the University of Utah (CSL).
- * All rights reserved.
- *
- * Permission to use, copy, modify and distribute this software is hereby
- * granted provided that (1) source code retains these copyright, permission,
- * and disclaimer notices, and (2) redistributions including binaries
- * reproduce the notices in supporting documentation, and (3) all advertising
- * materials mentioning features or use of this software display the following
- * acknowledgement: ``This product includes software developed by the
- * Computer Systems Laboratory at the University of Utah.''
- *
- * THE UNIVERSITY OF UTAH AND CSL ALLOW FREE USE OF THIS SOFTWARE IN ITS "AS
- * IS" CONDITION.  THE UNIVERSITY OF UTAH AND CSL DISCLAIM ANY LIABILITY OF
- * ANY KIND FOR ANY DAMAGES WHATSOEVER RESULTING FROM THE USE OF THIS SOFTWARE.
- *
- * CSL requests users of this software to return to csl-dist@cs.utah.edu any
- * improvements that they make and grant CSL redistribution rights.
- *
- *      Author: Bryan Ford, University of Utah CSL
- */
-
-#include <mach/kern_return.h>
-
-void
-interrupt_processor(int which_cpu)
-{
-	panic("interrupt_processor");
-}
-
-void
-start_other_cpus()
-{
-printf("start other CPUs please!!!\n");
-}
-
-kern_return_t
-cpu_control(int cpu, int *info, int count)
-{
-printf("cpu_control %d\n", cpu);
-	return KERN_FAILURE;
-}
-
-kern_return_t
-cpu_start(int cpu)
-{
-printf("cpu_start %d\n", cpu);
-	return KERN_FAILURE;
-}
-
